@@ -1,55 +1,0 @@
-# systemd internal services and sockets
-console-shell.service
-debian-fixup.service
-emergency.service
-fsck-root.service
-fsck@.service
-getty@.service
-halt.service
-ifup@.service
-kexec.service
-poweroff.service
-quotacheck.service
-quotaon.service
-reboot.service
-remount-rootfs.service
-rescue.service
-serial-getty@.service
-systemd-ask-password-console.service
-systemd-ask-password-wall.service
-systemd-binfmt.service
-systemd-hostnamed.service
-systemd-initctl.service
-systemd-journald.service
-systemd-localed.service
-systemd-logind.service
-systemd-modules-load.service
-systemd-random-seed-load.service
-systemd-random-seed-save.service
-systemd-readahead-collect.service
-systemd-readahead-done.service
-systemd-readahead-replay.service
-systemd-remount-api-vfs.service
-systemd-shutdownd.service
-systemd-sysctl.service
-systemd-timedated.service
-systemd-tmpfiles-clean.service
-systemd-tmpfiles-setup.service
-systemd-update-utmp-runlevel.service
-systemd-update-utmp-shutdown.service
-systemd-user-sessions.service
-systemd-vconsole-setup.service
-user@.service
-systemd-journald.socket
-syslog.socket
-systemd-shutdownd.socket
-systemd-initctl.socket
-# udev-settle should only be enabled when needed
-udev-settle.service
-# this delays the boot process so should only be enabled as needed
-NetworkManager-wait-online.service
-# thinkfan is disabled by default since it can damage the hardware
-# if not configured correctly
-thinkfan.service
-# pyroman is disabled by default as it needs explicit configuration
-pyroman.service
